# trace-history-gui

./: .gitignore  .gitmodules  README.md  WORK-ITEMS.md  __main__.py  main.spec  pyinstaller-mac.spec  pyinstaller-win.spec  pyproject.toml  qtcreator.pyproject
qtcreator/: .ui.boilerplate  connect.ui  mainwindow.ui  measure.ui  settings.ui  timer.ui
scripts/: build  build.bat  clean  clean.bat  install-libs  install-libs.bat  start.bat  update-ui  update-ui.bat
src/: command_line.py  controller.py  paths.py
src/model/: model.py  settings_mixin.py
src/trace_history_gui/: __init__.py  command_line.py  controller.py  main.py  model.py
src/trace_history_gui/model/: __init__.py  model.py
src/trace_history_gui/test/mock/: model.py
src/trace_history_gui/widgets/: __init__.py  connect.py  create_property.py  error_label.py  get_attribute.py  mainwindow.py  measure.py  settings.py  timer.py  ui_connect.py  ui_mainwindow.py  ui_measure.py  ui_settings.py  ui_timer.py
src/trace_history_gui/widgets/mixins/: ui_mixin.py
src/widgets/: create_property.py  mainwindow.py  measure.py  ui_mainwindow.py  ui_measure.py
trace_history_gui/: controller.py  main.py
trace_history_gui/widgets/: connect.py  create_property.py  error_label.py  mainwindow.py  measure.py  measurement_complete_dialog.py  settings.py  timer.py  ui_connect.py  ui_mainwindow.py  ui_measure.py  ui_settings.py  ui_timer.py
trace_history_gui/widgets/mixins/: ui_mixin.py
